# Otus-Cpp-2024-HW-8-Boost

./: BlockHashGetter.cpp  CMakeLists.txt  CmdLineOptions.cpp  CmdLineOptions.h  FileHandler.cpp  FileHandler.h  FileReader.cpp  FileReader.h  FilesDuplicatesSeacher.cpp  FilesDuplicatesSeacher.h  main.cpp  main.h
.github/workflows/: release.yml
